# djwr

./: .dockerignore  .env.example  .gitignore  README.md  celerybeat-schedule  docker-compose.yml  jest.config.js  jest.setup.js  package-lock.json  package.json  pyproject.toml  tailwind.config.js  test_api_debug.py  test_auth_debug.py  webpack.config.js
.github/workflows/: ci.yml
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: api.js.html  auth.js.html  cache.js.html  config.js.html  icons.js.html  index.html  search.js.html  subscriptions.js.html  ui.js.html  weather.js.html
docker/: Dockerfile
docker/nginx/: nginx.conf
docker/nginx/conf.d/: djwr.conf
docs/: OPENWEATHERMAP_API_GUIDE.md  UML_WEATHER_REMINDER.drawio  WEATHER_REMINDER_PLAN.md
frontend/src/css/: main.css
frontend/src/js/: api.js  auth.js  cache.js  config.js  icons.js  main.js  search.js  subscriptions.js  ui.js  weather.js
frontend/src/js/__tests__/: README.md  api.test.js  auth.test.js  cache.test.js  config.test.js  icons.test.js  search.test.js  subscriptions.test.js  ui.test.js  weather.test.js
scripts/: check_setup.py  test_auth_phase3.py
src/: __init__.py
src/app/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
src/app/management/commands/: create_fake_data.py
src/app/migrations/: 0001_initial.py  0002_alter_subscription_options.py  0003_remove_weatherdata_clouds_and_more.py  0004_remove_8days_period.py
src/app/services/: __init__.py  city_service.py  notification_service.py  weather_service.py
src/config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/templates/: base.html  test_frontend.html  weather.html
src/templates/components/: _air_conditions.html  _auth_form.html  _current_weather.html  _hourly_forecast.html  _profile_modal.html  _search.html  _selected_city_detail.html  _sidebar.html  _subscribed_cities.html  _subscription_modal.html
tests/: conftest.py  factories.py  test_auth.py  test_cities_weather.py  test_models.py  test_services.py  test_setup.py  test_subscriptions.py  test_subscriptions_integration.py  test_views.py
